crates/gritmodule/src/snapshots/marzano_gritmodule__markdown__tests__markdown_parser.snap
---
source: crates/gritmodule/src/markdown.rs
expression: patterns
---
- config:
    name: no_debugger
    body: "engine marzano(0.1)\nlanguage js\n\ndebugger_statement() => ."
    level: info
    title: Remove debugger statement
    description: "The code in production should not contain a `debugger`. It causes the browser to stop executing the code and open the debugger."
    tags:
      - fix
    samples:
      - name: Remove debbuger
        input: "function isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}"
        output: "function isTruthy(x) {\n  return Boolean(x);\n}"
        input_range:
          start:
            line: 23
            column: 1
          end:
            line: 26
            column: 4
          startByte: 287
          endByte: 362
        output_range:
          start:
            line: 30
            column: 1
          end:
            line: 32
            column: 4
          startByte: 364
          endByte: 427
    path: no_debugger.md
    position:
      line: 10
      column: 1
    raw:
      format: markdown
      content: "---\ntitle: Remove `debugger` statement\n---\n\nThe code in production should not contain a `debugger`. It causes the browser to stop executing the code and open the debugger.\n\ntags: #fix\n\n```grit\nengine marzano(0.1)\nlanguage js\n\ndebugger_statement() => .\n```\n\n```\n\n```\n\n## Remove debbuger\n\n```javascript\nfunction isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}\n```\n\n```typescript\nfunction isTruthy(x) {\n  return Boolean(x);\n}\n```\n"
  module: ~
  local_name: no_debugger
