crates/gritmodule/src/snapshots/marzano_gritmodule__markdown__tests__sample_labels.snap
---
source: crates/gritmodule/src/markdown.rs
expression: patterns
---
- config:
    name: no_debugger
    body: "engine marzano(0.1)\nlanguage js\n\ndebugger_statement() => ."
    level: info
    title: ""
    description: "The code in production should not contain a `debugger`. It causes the browser to stop executing the code and open the debugger."
    tags: ~
    samples:
      - name: Bad
        input: "function isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}"
        output: "function isTruthy(x) {\n  return Boolean(x);\n}"
        input_range:
          start:
            line: 20
            column: 1
          end:
            line: 24
            column: 1
          startByte: 306
          endByte: 364
        output_range:
          start:
            line: 29
            column: 1
          end:
            line: 32
            column: 1
          startByte: 393
          endByte: 439
      - name: Remove debugger - group 2
        input: "function isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}"
        output: "function isTruthy(x) {\n  return Boolean(x);\n}"
        input_range:
          start:
            line: 37
            column: 1
          end:
            line: 41
            column: 1
          startByte: 492
          endByte: 550
        output_range:
          start:
            line: 45
            column: 1
          end:
            line: 48
            column: 1
          startByte: 575
          endByte: 621
      - name: Remove debugger - no match
        input: "function isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}"
        output: ~
        input_range:
          start:
            line: 53
            column: 1
          end:
            line: 57
            column: 1
          startByte: 675
          endByte: 733
        output_range: ~
    path: no_debugger.md
    position:
      line: 9
      column: 1
    raw:
      format: markdown
      content: "---\ntitle: Remove `debugger` statement\ntags: fix\n---\n\nThe code in production should not contain a `debugger`. It causes the browser to stop executing the code and open the debugger.\n\n```grit\nengine marzano(0.1)\nlanguage js\n\ndebugger_statement() => .\n```\n\n## Remove debugger - pairs\n\n### Bad\n\n```javascript\nfunction isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}\n```\n\n### Good\n\n```typescript\nfunction isTruthy(x) {\n  return Boolean(x);\n}\n```\n\n## Remove debugger - group 2\nBad:\n```javascript\nfunction isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}\n```\n\nGood:\n```typescript\nfunction isTruthy(x) {\n  return Boolean(x);\n}\n```\n\n## Remove debugger - no match\nBad:\n```javascript\nfunction isTruthy(x) {\n  debugger;\n  return Boolean(x);\n}\n```\n"
  module: ~
  local_name: no_debugger
