crates/gritmodule/src/snapshots/marzano_gritmodule__markdown__tests__weird_patterns-2.snap
---
source: crates/gritmodule/src/markdown.rs
expression: output_content
---
CREATE PROCEDURE remove_emp (employee_id int) AS
    DECLARE
    tot_emps int;
    $$BEGIN
        DELETE FROM employees
        WHERE employees.employee_id = remove_emp.employee_id;
    tot_emps := tot_emps - 1;
    END;
$$ LANGUAGE plpgsql;
