crates/gritmodule/src/snapshots/marzano_gritmodule__markdown__tests__weird_patterns.snap
---
source: crates/gritmodule/src/markdown.rs
expression: patterns
---
- config:
    name: CloneActivities
    body: "engine marzano(0.1)\nlanguage sql\n\npattern dollar_quote_procedure_body() {\n`CREATE PROCEDURE $name($args) AS $decl $block;` as $proc where {\n    $block => `$$$block;\\n$$ LANGUAGE plpgsql`,\n    $decl => `DECLARE\\n $decl`\n    }\n}\ndollar_quote_procedure_body()\n"
    level: info
    title: "Oracle to PG: Dollar quote stored procedure body"
    description: "In Postgres, function and procedure bodies need to be wrapped in $$dollar quotes$$.\nThis pattern wraps a PLSQL `CREATE PROCEDURE` body in dollar quotes and adds a language specifier."
    tags:
      - fix
    samples:
      - name: Basic procedure
        input: "CREATE PROCEDURE remove_emp (employee_id int) AS\n    tot_emps int;\n    BEGIN\n        DELETE FROM employees\n        WHERE employees.employee_id = remove_emp.employee_id;\n    tot_emps := tot_emps - 1;\n    END;\n"
        output: "CREATE PROCEDURE remove_emp (employee_id int) AS\n    DECLARE\n    tot_emps int;\n    $$BEGIN\n        DELETE FROM employees\n        WHERE employees.employee_id = remove_emp.employee_id;\n    tot_emps := tot_emps - 1;\n    END;\n$$ LANGUAGE plpgsql;\n"
        input_range:
          start:
            line: 25
            column: 1
          end:
            line: 32
            column: 1
          startByte: 560
          endByte: 768
        output_range:
          start:
            line: 35
            column: 1
          end:
            line: 44
            column: 1
          startByte: 780
          endByte: 1023
    path: CloneActivities.md
    position:
      line: 10
      column: 1
    raw:
      format: markdown
      content: "---\ntitle: \"Oracle to PG: Dollar quote stored procedure body\"\ntags: [fix]\n---\n\nIn Postgres, function and procedure bodies need to be wrapped in $$dollar quotes$$.\nThis pattern wraps a PLSQL `CREATE PROCEDURE` body in dollar quotes and adds a language specifier.\n\n```grit\nengine marzano(0.1)\nlanguage sql\n\npattern dollar_quote_procedure_body() {\n`CREATE PROCEDURE $name($args) AS $decl $block;` as $proc where {\n    $block => `$$$block;\\n$$ LANGUAGE plpgsql`,\n    $decl => `DECLARE\\n $decl`\n    }\n}\ndollar_quote_procedure_body()\n```\n\n## Basic procedure\n\n```sql\nCREATE PROCEDURE remove_emp (employee_id int) AS\n    tot_emps int;\n    BEGIN\n        DELETE FROM employees\n        WHERE employees.employee_id = remove_emp.employee_id;\n    tot_emps := tot_emps - 1;\n    END;\n```\n\n```sql\nCREATE PROCEDURE remove_emp (employee_id int) AS\n    DECLARE\n    tot_emps int;\n    $$BEGIN\n        DELETE FROM employees\n        WHERE employees.employee_id = remove_emp.employee_id;\n    tot_emps := tot_emps - 1;\n    END;\n$$ LANGUAGE plpgsql;\n```\n"
  module:
    host: github.com
    fullName: getgrit/rewriter
    remote: "https://github.com/getgrit/rewriter.git"
    providerName: github.com/getgrit/rewriter
  local_name: CloneActivities
