crates/gritmodule/src/snapshots/marzano_gritmodule__markdown__tests__with_non_matching_samples.snap
---
source: crates/gritmodule/src/markdown.rs
expression: patterns
---
- config:
    name: no_eq_null
    body: "engine marzano(0.1)\nlanguage js\n\n// We use the syntax-tree node binary_expression to capture all expressions where $a and $b are operated on by \"==\" or \"!=\".\n// This code takes advantage of Grit's allowing us to nest rewrites inside match conditions and to match syntax-tree fields on patterns.\nbinary_expression($operator, $left, $right) where {\n    $operator <: or  { \"==\" => `===` , \"!=\" => `!==` },\n    or { $left <: `null`, $right <: `null`}\n}\n"
    level: info
    title: Compare null using  === or !==
    description: "Comparing to `null` needs a type-checking operator (=== or !==), to avoid incorrect results when the value is `undefined`."
    tags:
      - good
    samples:
      - name: "`$val == null` => `$val === null`"
        input: "if (val == null) {\n  done();\n}"
        output: "if (val === null) {\n  done();\n}"
        input_range:
          start:
            line: 29
            column: 1
          end:
            line: 31
            column: 4
          startByte: 701
          endByte: 749
        output_range:
          start:
            line: 35
            column: 1
          end:
            line: 37
            column: 4
          startByte: 751
          endByte: 800
      - name: "`$val != null` => `$val !== null`"
        input: "if (val != null) {\n  done();\n}"
        output: "if (val !== null) {\n  done();\n}"
        input_range:
          start:
            line: 43
            column: 1
          end:
            line: 45
            column: 4
          startByte: 840
          endByte: 888
        output_range:
          start:
            line: 49
            column: 1
          end:
            line: 51
            column: 4
          startByte: 890
          endByte: 939
      - name: "`$val != null` => `$val !== null` into `while`"
        input: "while (val != null) {\n  did();\n}"
        output: "while (val !== null) {\n  did();\n}"
        input_range:
          start:
            line: 57
            column: 1
          end:
            line: 59
            column: 4
          startByte: 992
          endByte: 1042
        output_range:
          start:
            line: 63
            column: 1
          end:
            line: 65
            column: 4
          startByte: 1044
          endByte: 1095
      - name: "Do not change `$val === null`"
        input: "if (val === null) {\n  done();\n}"
        output: "if (val === null) {\n  done();\n}"
        input_range:
          start:
            line: 71
            column: 1
          end:
            line: 73
            column: 4
          startByte: 1131
          endByte: 1180
        output_range:
          start:
            line: 71
            column: 1
          end:
            line: 73
            column: 4
          startByte: 1131
          endByte: 1180
      - name: "Do not change `$val !== null`"
        input: "while (val !== null) {\n  doSomething();\n}"
        output: "while (val !== null) {\n  doSomething();\n}"
        input_range:
          start:
            line: 79
            column: 1
          end:
            line: 81
            column: 4
          startByte: 1216
          endByte: 1265
        output_range: ~
    path: no_eq_null.md
    position:
      line: 10
      column: 1
    raw:
      format: markdown
      content: "---\ntitle: Compare `null` using  `===` or `!==`\n---\n\nComparing to `null` needs a type-checking operator (=== or !==), to avoid incorrect results when the value is `undefined`.\n\ntags: #good\n\n```grit\nengine marzano(0.1)\nlanguage js\n\n// We use the syntax-tree node binary_expression to capture all expressions where $a and $b are operated on by \"==\" or \"!=\".\n// This code takes advantage of Grit's allowing us to nest rewrites inside match conditions and to match syntax-tree fields on patterns.\nbinary_expression($operator, $left, $right) where {\n    $operator <: or  { \"==\" => `===` , \"!=\" => `!==` },\n    or { $left <: `null`, $right <: `null`}\n}\n\n```\n\n```\n\n```\n\n## `$val == null` => `$val === null`\n\n```javascript\nif (val == null) {\n  done();\n}\n```\n\n```typescript\nif (val === null) {\n  done();\n}\n```\n\n## `$val != null` => `$val !== null`\n\n```javascript\nif (val != null) {\n  done();\n}\n```\n\n```typescript\nif (val !== null) {\n  done();\n}\n```\n\n## `$val != null` => `$val !== null` into `while`\n\n```javascript\nwhile (val != null) {\n  did();\n}\n```\n\n```typescript\nwhile (val !== null) {\n  did();\n}\n```\n\n## Do not change `$val === null`\n\n```javascript\nif (val === null) {\n  done();\n}\n```\n\n## Do not change `$val !== null`\n\n```\nwhile (val !== null) {\n  doSomething();\n}\n```\n"
  module: ~
  local_name: no_eq_null
